# geometry_utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst  appveyor.yml  conda_requirements.txt  pixi.toml  pyproject.toml  setup.cfg  setup.cfg.old  setup.py
.github/: dependabot.yml
.github/workflows/: build_wheels.yml  test.yaml  update_lockfile.yaml
conda.recipe/: meta.yaml
geometry_utils/: __init__.py  _version.py  bound_box.py  cy_line_crossings.pyx  cy_point_in_polygon.pyx  cy_polygons.pyx  poly_clockwise.py  polygons.py
geometry_utils/tests/: test_bound_box.py  test_cy_point_in_polygon.py  test_line_crossings.py  test_polygons.py
notes/: point_in_polygon_performance.py
src/cy_src/: cy_core_types.pxd  cy_core_types.pyx  cy_polygons.pyx  cy_rect.pyx
src/geometry_utils/: __init__.py  bound_box.py  cy_line_crossings.pyx  cy_rect.pyx  polygons.py  utilities.py
src/geometry_utils/tests/: test_bound_box.py  test_cy_polygons.py  test_cy_rect.py  test_polygons.py  test_sutherland_hodgman.py
src/geometry_utils/tests/test_cy/: test_cy_core_types.py  test_sutherland_hodgman.py
