[build-system]
requires = ["scikit-build-core", "cython", "numpy", "cython-cmake"]
build-backend = "scikit_build_core.build"

[project]
name = "geometry_utils"
description = "Utilities for basic computational geometry directly with numpy arrays."
authors = [{name = "Chris Barker", email = "Chris.Barker@noaa.gov"}]
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">= 3.9"
dependencies = ["numpy"]
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
#  "Intended Audience :: Developers",
#  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: BSD-3-Clause",

  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/NOAA-ORR-ERD/geometry_utils"

[dependency-groups]
test = ["pytest"]
build = ["scikit-build-core", "cython", "numpy", "cython-cmake"]
dev = [{ include-group = "test" }, { include-group = "build"}, "build"]

[tool.scikit-build]
build-dir = "build"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "geometry_utils/__init__.py"

[tool.flake8]
ignore = ['E122', 'E123', 'E126', 'E127', 'E128', 'E731', 'E722']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 100
count = true
